# symmray

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: pypi-release.yml  tests.yml
ci/requirements/: base.txt  py-base.yml
docs/: changelog.md  conf.py  develop.md  index.md  index.rst  installation.md
docs/_static/: my-styles.css
examples/: batch gpu fermionic amplitudes jax.ipynb  batch gpu fermionic amplitudes torch.ipynb  fermionic spinful amplitude explore.ipynb  fermionic spinless amplitude explore.ipynb  flat fermionic amplitude.ipynb  flat fermionic spinful amplitude.ipynb  quimb-peps-flat.ipynb  quimb-peps.ipynb
symmray/: __init__.py  abelian_common.py  abelian_core.py  array_common.py  base_core.py  block_core.py  bosonic_common.py  common.py  core.py  fermi_core.py  fermionic_common.py  fermionic_core.py  fermionic_local_operators.py  fermionic_ops.py  flat_abelian_array.py  flat_abelian_core.py  flat_core.py  flat_fermionic_array.py  flat_fermionic_core.py  flat_index.py  flat_linalg.py  flatray.py  hamiltonians.py  index_common.py  interface.py  linalg.py  linalg_common.py  networks.py  sparse_abelian_array.py  sparse_abelian_core.py  sparse_common.py  sparse_fermionic_array.py  sparse_fermionic_core.py  sparse_index.py  sparse_linalg.py  spin_local_operators.py  symmetric_core.py  symmetries.py  utils.py  utils_test.py  (+1 more)
symmray/flat/: __init__.py  flat_abelian_array.py  flat_array.py  flat_array_common.py  flat_base.py  flat_data_common.py  flat_fermionic_array.py  flat_index.py  flat_linalg.py  flat_vector.py
symmray/scipy/: __init__.py  linalg.py
symmray/sparse/: __init__.py  sparse_abelian_array.py  sparse_array.py  sparse_array_common.py  sparse_base.py  sparse_common.py  sparse_data_common.py  sparse_fermionic_array.py  sparse_index.py  sparse_linalg.py  sparse_vector.py
tests/: conftest.py  test_abelian_core.py  test_abelian_linalg.py  test_block_core.py  test_block_linalg.py  test_fermi_core.py  test_fermionic_core.py  test_fermionic_linalg.py  test_fermionic_local_operators.py  test_flat_abelian_core.py  test_flat_core.py  test_flat_fermionic_core.py  test_flat_linalg.py  test_flatray.py  test_no_method_overrides.py  test_quimb_full_contraction.py  test_reshape_args.py  test_spin_local_operators.py  test_symmetric_core.py  test_symmetric_linalg.py
tests/test_flat/: test_flat_abelian_array.py  test_flat_abelian_linalg.py  test_flat_fermionic_array.py  test_flat_fermionic_linalg.py  test_flat_linalg.py  test_flat_vector.py
tests/test_quimb_integration/: test_quimb_energy_vmc_compat.py  test_quimb_fermionic_amplitudes.py
tests/test_sparse/: test_sparse_abelian_array.py  test_sparse_abelian_linalg.py  test_sparse_fermionic_array.py  test_sparse_fermionic_linalg.py
