[project]
name = "symmray"
description = "A minimal block sparse symmetric and fermionic tensor python library"
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "autoray",
    "block",
    "dmrg",
    "fermions",
    "mera",
    "networks",
    "peps",
    "physics",
    "quantum",
    "sparse",
    "symmetry",
    "tebd",
    "tensor",
    "tensors",
]
requires-python = ">=3.11"
dependencies = [
    "autoray>=0.8"
]

[project.optional-dependencies]
testing = [
    "cotengra",
    "coverage",
    "einops",
    "numpy",
    "pytest-cov",
    "pytest",
    "quimb",
]
docs = [
    "astroid",
    "furo",
    "ipython",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx",
]

[project.urls]
"Documentation" = "https://symmray.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/symmray/"
"Issues" = "https://github.com/jcmgray/symmray/issues"
"Changelog" = "https://github.com/jcmgray/symmray/releases"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "symmray/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "once"

[tool.ruff]
line-length = 79
target-version = "py311"
lint.ignore = ["E741"]

# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"
autoray = ">=0.8.4"

[tool.pixi.pypi-dependencies]
symmray = { path = ".", editable = true }

[tool.pixi.feature.testing.dependencies]
cotengra = ">=0.7.5"
coverage = ">=7.13.1"
einops = ">=0.8.1"
networkx = ">=3.4.2"
numpy = ">=2.2.6"
pytest = ">=9.0.2"
pytest-cov = ">=7.0.0"
quimb = ">=1.12.0"

[tool.pixi.feature.pyold.dependencies]
python = "3.11.*"
[tool.pixi.feature.pymid.dependencies]
python = "3.13.*"
[tool.pixi.feature.pynew.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
astroid = "*"
furo = "*"
ipython = "*"
myst-nb = "*"
setuptools_scm = "*"
sphinx = "*"
sphinx-autoapi = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
[tool.pixi.feature.docs.pypi-dependencies]
squeaky = "*"

[tool.pixi.environments]
testpyold = { features = ["pyold", "testing"] }
testpymid = { features = ["pymid", "testing"] }
testpynew = { features = ["pynew", "testing"] }
docs = { features = ["pynew", "docs"] }

[tool.pixi.tasks.test]
default-environment = "testpymid"
env = { SYMMRAY_DEBUG = "1" }
cmd = """
pytest \
    tests/ \
    --cov=symmray \
    --cov-report=xml \
    --verbose \
    --durations=10
"""
cwd = "."

[tool.pixi.feature.docs.tasks]
lint = { cmd = """
    ruff check --select I
    && ruff format --check
""", cwd = "." }
format = { cmd = """
    ruff check --select I --fix
    && ruff format
""", cwd = "." }
format-all = { cmd = """
    ruff check --select I --fix
    && ruff format
    && find . -name "*.ipynb" -print0 | xargs -0 squeaky
""", cwd = "." }
