[project]
name = "symmray"
description = "A minimal block sparse symmetric and fermionic tensor python library"
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "autoray",
    "block",
    "dmrg",
    "fermions",
    "mera",
    "networks",
    "peps",
    "physics",
    "quantum",
    "sparse",
    "symmetry",
    "tebd",
    "tensor",
    "tensors",
]
requires-python = ">=3.11"
dependencies = [
    "autoray>=0.8"
]

[project.optional-dependencies]
testing = [
    "cotengra",
    "coverage",
    "einops",
    "numpy",
    "pytest-cov",
    "pytest",
    "quimb",
]
docs = [
    "astroid",
    "furo",
    "ipython",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx",
]

[project.urls]
"Documentation" = "https://symmray.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/symmray/"
"Issues" = "https://github.com/jcmgray/symmray/issues"
"Changelog" = "https://github.com/jcmgray/symmray/releases"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "symmray/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "once"

[tool.ruff]
line-length = 79
target-version = "py311"
lint.ignore = ["E741"]

# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"
autoray = ">=0.8.10"

[tool.pixi.pypi-dependencies]
symmray = { path = ".", editable = true }

[tool.pixi.feature.testing.dependencies]
cotengra = ">=0.8.0"
coverage = ">=7.13.5"
einops = ">=0.8.2"
networkx = ">=3.6.1"
numpy = ">=2.4.3"
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
quimb = ">=1.13.0"

[tool.pixi.feature.pyold.dependencies]
python = "3.11.*"
[tool.pixi.feature.pymid.dependencies]
python = "3.13.*"
[tool.pixi.feature.pynew.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
astroid = ">=4.1.2"
cotengra = ">=0.8.0"
furo = ">=2025.12.19"
ipython = ">=9.13.0"
myst-nb = ">=1.4.0"
ruff = ">=0.15.11"
setuptools_scm = ">=9.2.2"
sphinx = ">=9.1.0"
sphinx-autoapi = ">=3.8.0"
sphinx-copybutton = ">=0.5.2"
sphinx-design = ">=0.7.0"
[tool.pixi.feature.docs.pypi-dependencies]
squeaky = ">=0.7.0"

[tool.pixi.environments]
testpyold = { features = ["pyold", "testing"] }
testpymid = { features = ["pymid", "testing"] }
testpynew = { features = ["pynew", "testing"] }
docs = { features = ["pynew", "docs"] }

[tool.pixi.tasks.pytest]
default-environment = "testpymid"
env = { SYMMRAY_DEBUG = "1" }
cmd = "pytest"
cwd = "."
description = "Run pytest."

[tool.pixi.tasks.test]
default-environment = "testpymid"
env = { SYMMRAY_DEBUG = "1" }
cmd = """
pytest \
    tests/ \
    --cov=symmray \
    --cov-report=xml \
    --verbose \
    --durations=10
"""
cwd = "."
description = "Run tests with coverage."

[tool.pixi.feature.docs.tasks.docs]
cmd = "sphinx-build -b html docs docs/_build/html"
cwd = "."
description = "Build the HTML documentation."

[tool.pixi.feature.docs.tasks.readthedocs]
cmd = "sphinx-build -T -b html docs $READTHEDOCS_OUTPUT/html"
cwd = "."
description = "Specific task for building docs on ReadTheDocs."

[tool.pixi.feature.docs.tasks.docs-clean]
cmd = "rm -rf docs/_build"
cwd = "."
description = "Remove documentation build artifacts."

[tool.pixi.feature.docs.tasks.docs-serve]
cmd = "python -m http.server -d docs/_build/html 8000"
cwd = "."
description = "Serve the documentation locally."

[tool.pixi.feature.docs.tasks.lint]
cmd = """
    ruff check --select I &&
    ruff format --check
"""
cwd = "."
description = "Check code formatting and imports with ruff."

[tool.pixi.feature.docs.tasks.format]
cmd = """
    ruff check --select I --fix &&
    ruff format
"""
cwd = "."
description = "Apply code formatting and fix imports with ruff."

[tool.pixi.feature.docs.tasks.format-all]
cmd = """
    ruff check --select I --fix &&
    ruff format &&
    find . -name "*.ipynb" -print0 | xargs -0 squeaky
"""
cwd = "."
description = "Format all files including notebooks with squeaky."
